Only use Java 8 features (2)